# runpod-pods-python

./: .env.example  AGENTS.md  README.md  example_pod_manager.py  main.py  pyproject.toml
openspec/changes/archive/2026-02-24-list-runpod-pods/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-list-runpod-pods/specs/list-pods/: spec.md
openspec/changes/archive/2026-02-25-pod-lifecycle-demo/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-pod-lifecycle-demo/specs/pod-lifecycle/: spec.md
openspec/changes/archive/2026-02-27-list-official-runpod-images/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-list-official-runpod-images/specs/list-official-images/: spec.md
openspec/changes/archive/2026-03-02-add-pod-template-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-pod-template-support/specs/pod-template/: spec.md
openspec/changes/archive/2026-03-03-pod-manager-class/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-pod-manager-class/specs/pod-manager/: spec.md
openspec/changes/archive/2026-03-03-remove-templates/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-03-remove-templates/specs/cleanup/: spec.md
openspec/specs/list-pods/: spec.md
openspec/specs/pod-lifecycle/: spec.md
scripts/: list_gpus.py
src/runpod_pods_demo/: __init__.py  create_pod.py  create_template.py  delete_template.py  exceptions.py  list_pods.py  list_templates.py  pod_manager.py  terminate_pod.py  wait_for_pod.py
